--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -28,6 +28,7 @@ main section.categories-show {
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
         border-radius: 0.25rem;
+        pointer-events: none;
       }
 
       a {
@@ -91,6 +92,10 @@ main section.categories-show {
           padding-right: 1em;
           background-color: rgba(0, 130, 29, 0.7);
           color: white;
+        }
+        button.btn-disabled {
+          opacity: .5;
+          pointer-events: none;
         }
       }
     }
