--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,64 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<div class="Main-dashboard">
+  <h1 class="display-1">Welcome Admin</h1>
+
+  <div class="container">
+    <div class="row row-cols-2">
+      <div class="col">
+        <div class="card">
+          <img src="<%= @product[0].image%>" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Current Products Available</h5>
+            <p class="card-text"><%= @productCount %></p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+              Products
+            </button>
+
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+                  <h3 class="display-3">Products</h3>
+                </h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul>
+                  <% @product.each do |product| %>
+                    <li> <%= product.name %> </li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="<%= @product[1].image %>" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Current Categories Available</h5>
+            <p class="card-text"><%= @categoryCount %></p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Categories</button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasRightLabel">
+                  <h3 class="display-3">Categories</h3>
+                </h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul>
+                  <% @category.each do |category| %>
+                    <li> <%= category.name %> </li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
