--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -40,7 +40,7 @@
             </li>
             <% end %>
             <li class="nav-item">
-            <%= link_to 'About us', [:about], class: "nav-link" %>
+            <%= link_to 'About us', about_index_path, class: "nav-link" %>
             </li>
           <%# </ul>
         </li> %>
@@ -73,6 +73,11 @@
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+        <% if current_user %>
+        <li class="nav-link"> Signed in as: <%= current_user.name %>   |   <%= link_to "Logout", "/logout" %> </li>
+          <% else %>
+            <li class="nav-link"> <%= link_to "Login", "/login" %>   |   <%= link_to "Sign up", "/signup" %> </li>
+        <% end %>
       </ul>
     </div>
   </div>
