--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,30 @@
-<h2 class="display-2">Sign up!</h1>
-
-<%= form_for :user, url: '/users' do |t| %>
-  
-  Name: <%= t.text_field :name %>
-  Email: <%= t.text_field :email %>
-  Password: <%= t.password_field :password %>
-  Password Confirmation: <%= t.password_field :password_confirmation %>
-  <%= t.submit "Submit" %>
-
-<% end %>
+<h2 class="display-2">Sign up!</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <%= form_for :user, url: '/users' do |f| %>
+        <div class="form-group">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.text_field :email, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+        <%= f.submit "Submit", class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
